--- a/css/index2.css
+++ b/css/index2.css
@@ -92,3 +92,52 @@ font-weight: 600;
     color: #fff;
     transition: .5s;
 }
+.option-box {
+  padding: 30px 20px;
+  background: #fff;
+  color: #111;
+}
+
+.option-box h2 {
+  font-size: 18px;
+  margin-bottom: 20px;
+}
+
+.option-box h2 span {
+  color: #999;
+  font-weight: normal;
+}
+
+.option-item {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 14px;
+}
+
+.option-item label {
+  font-size: 13px;
+  color: #555;
+  margin-bottom: 6px;
+}
+
+.option-item input {
+  padding: 14px 12px;
+  font-size: 14px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+}
+
+.option-item input::placeholder {
+  color: #aaa;
+}
+
+.fake-buy {
+  width: 100%;
+  margin-top: 20px;
+  padding: 16px;
+  font-size: 16px;
+  background: #111;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+}
